# NovoSistema

./: .env.example.prod  .gitignore  COMANDOS_ADMIN.ps1  COMANDOS_DIRETOS.ps1  COMANDOS_TESTE_CORRETOS.md  COMANDOS_TESTE_MANUAL.ps1  COMANDOS_TESTE_MANUAL.txt  COMO_EXECUTAR_ADMIN.md  COMO_INSTALAR.md  COMPARACAO_COMPLETA_MULTIPLATAFORMA.md  COMPARACAO_LINUX_WINDOWS.md  CONFIGURAR_BANCO_PROJETO.md  CONTEXT_FOR_NEW_DEVIN.md  CORRIGIR_POSTGRESQL.md  DIAGNOSTICO_ERROS.md  GUIA_VERIFICACAO_ERROS.md  INSTALACAO_MANUAL.md  INSTALAR_POSTGRESQL_MANUAL.md  INSTALLATION_GUIDE.md  INSTALL_GUIDE.md  Makefile  NET_START_COMMANDS.md  PLANO_CORRECAO_IMEDIATO.md  POSTGRESQL_COMMANDS.md  POSTGRESQL_SETUP_GUIDE.md  README.md  README_COMPLETO.md  STATUS_FERRAMENTAS.md  backup-db.ps1  check_tools.bat  check_tools.ps1  dev-commands.ps1  docker-compose.prod.yml  docker-compose.yml  instalar_postgresql.bat  install_all.bat  install_as_admin.ps1  install_final.ps1  install_fixed.ps1  install_linux_equivalent.ps1  (+24 more)
claudesistema/SistemaUniversalEventos-UltraPerformance-v3.0.0/paineluniversal/backend/: FASE2_CONCLUIDA.md  FASE2_IMPLEMENTACAO_COMPLETA.md  ROUTER_USUARIOS_IMPLEMENTADO.md  ROUTER_WHATSAPP_IMPLEMENTADO.md  alembic.ini  install_deps.bat  pyproject.toml  requirements.txt  test_security_core.py  test_smoke_ultra_expert.py  test_ultra_expert_standalone.py  teste_qr_codes.py
claudesistema/SistemaUniversalEventos-UltraPerformance-v3.0.0/paineluniversal/backend/app/: auth_manager.py  main_simples.py  main_ultra_optimized.py  main_ultra_performance.py  test_simples.py
claudesistema/SistemaUniversalEventos-UltraPerformance-v3.0.0/paineluniversal/backend/scripts/: validate_sprint3_integration.py
claudesistema/SistemaUniversalEventos-UltraPerformance-v3.0.0/paineluniversal/backend/tests/: test_advanced_features.py  test_checkin_system.py  test_pdv_router.py  test_refund_system.py
paineluniversal/backend/: .env.example  Dockerfile.dev  Dockerfile.prod  README.md  ROUTER_LISTAS_IMPLEMENTADO.md  ROUTER_TRANSACOES_IMPLEMENTADO.md  ULTRA_PERFORMANCE_DEPLOYMENT_GUIDE.md  add_lista_fields_migration.py  add_qr_code_migration.py  backend_simples.py  create_financeiro_tables.py  create_gamificacao_tables.py  create_meep_client_tables.py  create_tablet_tables.py  pyproject.toml  pytest.ini  redis.conf  requirements.txt  seed_financeiro_data.py  start-redis.bat  test_api_simples.py  test_auth_server.py  test_sistema_completo.py  test_smoke_simple.py  teste_endpoints_validacao.py  update_existing_qr_codes.py
paineluniversal/backend/alembic/versions/: 2f92f2f1a3b2_create_all_tables_final.py
paineluniversal/backend/app/: auth.py  database.py  logging_manager.py  main.py  main_backup.py  main_final.py  main_final_v2.py  main_intermediario.py  main_minimal.py  main_production.py  main_standalone.py  main_ultra_simplified.py  middleware.py  models.py  models_ultra_performance.py  notification_manager.py  qr_checkin_manager.py  scheduler.py  schemas.py  schemas_backup.py  websocket.py
paineluniversal/backend/app/core/: async_processing.py  cache_ultra_optimizer.py  cdn_integration.py  config_sqlite.py  database_ultra_performance.py  horizontal_scaling.py  monitoring_system.py  openai_config.py  security.py  utils.py
paineluniversal/backend/app/monitoring/: sentry_config.py
paineluniversal/backend/app/routers/: analytics_novo.py  auth.py  authentication.py  backup.py  banking_integration.py  checkins.py  cupons.py  dashboard.py  empresas.py  eventos.py  financeiro.py  gamificacao.py  ia_avancada.py  listas.py  listas_mock.py  listas_original.py  meep_clients.py  n8n.py  payment_links.py  pdv.py  receivables.py  relatorios.py  tablets.py  transacoes.py  usuarios.py  utils.py  websocket_router.py  whatsapp.py  whatsapp_clean.py
paineluniversal/backend/app/services/: __init__.py  backup.py  banking_service.py  checkin_mobile.py  compliance_security_service.py  digital_account_service.py  estoque.py  gamification_engine.py  init_temp.py  openai_service.py  payment_links_service.py  payment_processor_service.py  pix_service.py  qr_code_generator.py  refund_intelligence.py  refund_orchestrator.py  refund_processor.py  refund_service.py  relatorios.py  ultra_expert_ai.py  ultra_expert_payments.py  ultra_expert_realtime.py  webhook_service.py  websocket_events.py  whatsapp_service.py
paineluniversal/backend/app/tasks/: event_tasks.py  ultra_async_processor.py
paineluniversal/backend/app/testing/: load_testing_framework.py
paineluniversal/backend/app/utils/: cpf_utils.py  image_uploader.py
paineluniversal/backend/app/websockets/: ultra_websockets.py
paineluniversal/backend/tests/: conftest.py  test_auth_router.py  test_basic.py  test_eventos.py  test_eventos_advanced.py  test_eventos_router.py  test_performance.py  test_websocket_integration.py
paineluniversal/backend/tests/performance/: k6_load_tests.js
(+335 files in other folders)
